tests/type-errors/001.zir
fun comp f() {
  -- Just so that the var decl isn't the first in the file
  return ()
}

var x : () := true

let comp main = read [int] >>> write [int]
